# common_sourcecode

./: .gitignore  ID_prefix.h  README.md  TODO.txt  binary_search.cpp  binary_search.h  directory_names.txt  fastest_data_type.h  folder_names.txt  git_clients.txt  indentation_style.txt
Aladdin_Enterprises/md5_implementation/: GenerateMD5checksum.cpp  GenerateMD5checksum.hpp
Attributes/: FTPserverAttributes_stdstring.hpp  FileOrDirWatchInfo.hpp
CMake/: MinGW_PATH_sh.exe_message.cmake  SGR_terminalColours.cmake  ShowMsg_CompLvl.cmake  addExeFileExt.cmake  createDebugVersion.bat  delimitStringsByPlusChar.cmake  getDateAsVersionString.cmake  printList1ItemPerLine.cmake  runCMakeBuildSysGenerator.bat  setAndResolveFileSysDir.cmake  useCpp11.cmake  writeItemsToFile.cmake
C_standard_library/: CstdLib_ID_prefix.h  ID_prefix.h  string_compare_return_codes.h
Controller/: GetErrorMessageFromLastErrorCode.hpp  GetLastErrorCode.hpp  GetNumberOfLogicalCPUcores.h  IDynFreqScalingAccess.hpp  ReadFileContent.cpp  ReadFileContent.hpp  SetThreadAffinityMask.h  Sleep.hpp
Controller/CPU-related/: GetCPUclockAndMultiplier.hpp  GetCurrentReferenceClock.cpp  GetCurrentReferenceClock.hpp  PerformanceCounterValueDiff.h  ReadTimeStampCounter.h
Controller/FileSystem/: GetAllocatedFileSizeWithinFileSystem.cpp  GetFilenameWithoutExtension.hpp  I_FileSystemEvents.hpp  IsRelativePath.hpp  SetCurrentWorkingDir.hpp  SynchronizeFileStatus.hpp
Controller/Logger/: HTMLformatLogFileWriter.cpp  HTMLformatLogFileWriter.hpp  HTMLlogFormatter.cpp  (+19 more)
CstdLib/: fseek.h  strcmpRtrnCds.h
FileSystem/: FileSys_ID_prefix.h  GetAbsolutePath.hpp  GetCurrentWorkingDir.hpp  GetDirContents.hpp  ID_prefix.h  IsRelativePath.hpp  PathSeperatorChar.cpp  PathSeperatorChar.hpp  SetCurrentWorkingDir.hpp  file_exists.h  file_or_dir_exists.hpp  isDirectory.hpp  isRegularFile.hpp  path_seperator.h  setAndResolveFileSysDir.cmake  setAndResolveFileSysPath.cmake
IDEs/: NetBeans.txt  Visual_Studio_Code,CMake,C++.txt
InputOutput/: ASCIIcodepage850.hpp  GetCharInACSIIcodePage850.hpp  LockableFile.hpp  ReadFileContent.cpp
LaTex/: includepdfWithBoxAndFooter.tex  log.tex  setVarVal.tex
Linux/: EnglishMessageFromErrorCode.cpp  GetCurrentThreadNumber.h  GetErrorMessageFromLastErrorCode.cpp  GetLastErrorCode.hpp  GetNumberOfLogicalCPUcores.cpp  GetTickCount.hpp  SetThreadAffinityMask.h  daemon.c  daemon.h
OperatingSystem/: CPUcoreUsageException.hpp  GetErrorMessageFromErrorCode.h  GetErrorMessageFromLastErrorCode.hpp  GetLastErrorCode.hpp  ID_prefix.h  OpSys_ID_prefix.h
OperatingSystem/BSD/socket/acceptTimeoutTest/: CMakeLists.txt  acceptTimeoutTest.cpp  createDebugVersion.bat  linkToBSDsockFns.cmake
OperatingSystem/BSD/socket/acceptTimeoutTest/cxxopts/: handleCmdLineOpts.hpp
OperatingSystem/BSD/socket/tests/client/: CMakeLists.txt  createDebugVersion.bat  linkToBSDsockets.cmake  main.cpp
OperatingSystem/Unix/CPUFreq/tests/getAvailGvrnrs/: CMakeLists.txt  main.c
OperatingSystem/Windows/hardware/NVMe/tests/getSMARTinfo/C_and_C++/: CMakeLists.txt  Cpp_compiler.cmake  createMSVC2022project.bat  getDataCarrierIDviaCxxopts.h  getSMARTvals_main.c  readNVMeSMARTattrVals_main.cpp
OperatingSystem/Windows/hardware/SMART/tests/read_identity/C_and_C++/: CMakeLists.txt  handleCmdLneOpts.h  main.c  readSMART_IDtest_buildExe.cmake  readSMART_IDtest_init.cmake
OperatingSystem/multithread/tests/threadRetCode/: CMakeLists.txt  Linux_build.sh  main.cpp
Process/: CommandLineArgs.hpp  CommandLineOption.hpp
Windows/: CreateProcess.cpp  DLLloadError.hpp  EnvironmentBlockAccessRunTimeDynLinked.cpp  ErrorCodeFromGetLastErrorToString.cpp  ErrorCodeFromGetLastErrorToString.h  GetCurrentProcessExeFileNameWithoutDirs.cpp  GetErrorMessageFromLastErrorCode.cpp  GetHardwareAccessErrorDescription.cpp  GetLastErrorCode.hpp  GetNumberOfLogicalCPUs.cpp  GetNumberOfLogicalCPUs.h  GetWindowsVersion.cpp  HideMinGWconsoleWindow.h  LocalLanguageMessageFromErrorCode.cpp  LocalLanguageMessageFromErrorCode.h  SetExePathAsCurrentDir.cpp  WTSSendMessageRunTimeDynLinked.cpp  WTSSendMessageRunTimeDynLinked.hpp
Xerces/: ConvertXercesStringToStdWstring.cpp  ConvertXercesStringToStdWstring.hpp  Convert_wchar_t_StringToXercesString.hpp  DocumentLocationSAX2Handler.cpp  DocumentLocationSAX2Handler.hpp  GetErrorDescripton.hpp  ReadXMLdocument.hpp  ReadXMLfile.hpp  XercesAttributesHelper.cpp  XercesAttributesHelper.hpp  XercesHelperFunctions.hpp  XercesString.cpp  XercesString.hpp  compareWithANSIstring.hpp  compareWithWideString.hpp
character_string/: ConvertToTypeName.hpp  modifiedUTF8.hpp
compiler/: C++.txt  compilerIDprfx.h  current_function.hpp  force_inline.h  printTargetProperties.cmake  setDbgOpts.cmake
compiler/C,C++/tests/fnSigNms/C,C++/: CMakeLists.txt  createWith1CmdLneArgForFn.bat  fnSigNmsTest.cmake  fnSigNmsTestMain.c  runTestWithCmdLneArgs.bat
data_structures/: ByteArray.hpp  SimpleLinkedList.hpp  Trie.cpp  Trie.hpp  UTF8string.hpp
data_structures/Trie/NodeTrie/tests/: CMakeLists.txt  NodeTrieIterator_test.cpp
date/: GregorianCalendar.tex  cmp2Dates.tex  isLeapYear.tex
hardware/: hardware_ID_prefix.h
multithread/: I_Thread.cpp  nativeThreadType.hpp
preprocessor_macros/: BuildTimeString.h  Windows_compatible_typedefs.h  bitmasks.h  check_arithmetic_overflow.h  css_basic_stringstream.hpp  determine_OS.h  dll_main_front_signature.h  expand_and_stringify.h  export_function_symbols.h  global_logger_object.hpp  inline.h  log_logger_name_thread_unsafe.h  logging_preprocessor_macros.h  logging_preprocessor_macros_definitions.h  make_widestring.h  no_op_debug_output_macros.h  operating_system_name.h  path_seperator.hpp  preprocessor_helper_macros.h  preprocessor_logging_macros.cpp  show_via_GUI.h  specstrings.h  string_typedefs.h  stringize.h  suppress_unused_variable.h  supress_unused_variable.h  thread_proc_calling_convention.h  trace.h  value_difference.h
terminal/: SGR_colors.sh
time/: timeConstants.h
wxWidgets/: callFindwxWidgets.cmake
wxWidgets/icon/tests/bars/: CMakeLists.txt  createUnixMakefileWithCMake.sh  main.cpp  run.bat
(+627 files in other folders)
